fixed css bug on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
             </section>
 
             <footer class="grid-block flex-center">
-                <p>@Copyright  &nbsp;<a href="https://github.com/victoria-kholina" target="_blank" class="link white-link">Victoria Shupliak </a></p>
+                <p>Designed & Developed by&nbsp;<a href="https://github.com/victoria-kholina" target="_blank" class="link white-link">Victoria Shupliak </a></p>
             </footer>
 
         </div>
