--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://cdn.rawgit.com/chrisveness/crypto/4e93a4d/sha256.js"></script>
-
+</head>
 <body class="page">
 
 <div class="wrapper flex-center">
