optimization / fixing bugs / adding comments

--- a/src/index.html
+++ b/src/index.html
@@ -132,9 +132,9 @@
                             <button class="btn" id="add-task">Add task</button>
                         </div>
                         <div class="tasks-filter">
+                            <button id="all-tasks" class="link black-link btn-link active">All </button>
                             <button id="to-do-tasks" class="link black-link btn-link">To do </button>
                             <button id="done-tasks" class="link black-link btn-link">Done </button>
-                            <button id="all-tasks" class="link black-link btn-link">All </button>
                             <button id="close-all-tasks"  class="link black-link btn-link close-tasks">Remove all tasks</button>
                         </div>
                         <!-- Tasks list -->
